--- a/tsa.html
+++ b/tsa.html
@@ -79,12 +79,13 @@ TSA allows students with similar interests in the STEM field to come together, m
         </p>
         <h2>Officers</h2>
         <h3>
-          President: Claire Hsu<br>
-          Vice President: Harshu Musunuri<br>
-          Treasurer: Ryan Chu<br>
+          President: Arkaprabha Bhattacharya<br>
+          Vice President: Iman Haji<br>
+          Treasurer: Jean Kim<br>
           Secretary: On Kwon<br>
-          Reporter: Lam Pham<br>
-          Sergeant at Arms: Braden Whitman<br>
+          Reporter: Kevin Lee<br>
+          Sergeant at Arms: Harshu Musunuri<br>
+          Outreach Liaison: Ryan Chu<br>
         </h3>
         <p>
           Our officers play a key role in keeping our large chapter running smoothly, by holding weekly meetings, communicating with and mentoring members, and managing the budget and paperwork that goes with running a TSA Chapter.
