--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
     <header id="header">
       <div class="content">
         <div id='logo'>
-          <a href="">Jackson</a>
+          <a href="index.html">Jackson</a>
         </div>
         <nav id="nav">
           <ul>
