--- a/design.html
+++ b/design.html
@@ -29,36 +29,48 @@
     <div class="pagecontent">
       <section class="module parallax parallax-1" id="desbkgd">
         <div class="container">
-          <h1>Introducing</h1><br>
-          <h1>Augmented Reality</h1>
+          <h1>Welcome to</h1><br>
+          <h1>Xythe</h1>
         </div>
       </section>
       <section class="module">
-        <div class="emblem"><h1>Taking a Walk Just Got Ten Times Better</h1></div>
+        <div class="emblem"><h1>A Revolution Just Waiting to Happen</h1></div>
       </section>
       <section class="module content work">
         <div id="intro">
           <p>
-            Augmented Reality (AR) works to blur the line between reality and imagination. AR takes what we experience in the real world, and enhances it using computer-generated environments. Using a variety of technological innovations such as haptic feedback, graphics, sounds, 3D camera tracking, and smells, AR takes things we can hear, see, smell, or feel and “augments” it in order to create a revolutionary new experience for those using it. </p><p>
+           We all remember the robot world of the Jetsons, with their robot servers, robot shop owners, and even robot animals.</p><p>
+            An average joe might call that pure fantasy. But we call it the approaching reality.</p><p>
+            Jackson Robotics Solutions is committed to making the impossible possible. To take the pin up poster utopia dream we have all seen and thought of, and turn it into our world today.</p><p>
+          But an average joe might ask.</p><p>
+          How?</br>
+          Two words. Artificial. Intelligence.</p><p>
+          At Jackson Robotics Solutions, us average joes have not only asked these same questions, but have spent countless hours figuring out how to create an AI engine, paired with a robot that can actively aid in tasks that we could always need a little help in.</p><p>
+      So we present to you:</p>
 
-Imagine, for a minute, that you are walking down the street with a pair of sunglasses on. However, these are not your typical prescription sunglasses.Instead, they are crammed with high-tech sensors and a computer that are working together at projecting various real-time information onto the glasses regarding your surroundings. You turn and look at a specific building, and your glasses project information regarding that building, and other buildings like it in the near vicinity. A small camera and a multitude of sensors work in unison to gain an artificial sense of “awareness” of your surroundings, so that your AR technology can provide you with live information about anything you look at, whether it be a wild animal, a house, or a street sign;  you don't have to work with AR, AR works with you
-          </p>
-          <p>
-            Previously, AR tech has been limited to gaming, at least for mainstream audiences. Games such as Pokemon GO and Ingress have adopted this technology into smartphones, but ongoing research and development hints at broader applications.
-          </p>
+      <h2> Model Xythe</h2>
+      <h2> Model Xythe is a robot, meant to help ameliorate the student and businessman lifestyle.</h2> 
         </div>
         <img src="img/pokemon.jpg" id="poke">
       </section>
       <section class="module">
-        <div class="emblem"><h1>The possibilites are endless</h1></div>
+        <div class="emblem"><h1>Let Imagination Conquer Reality</h1></div>
       </section>
       <section class="module content" id="app">
         <div id="Applications">
-          <h2>What is AR used for?</h2>
-          <h3>Augmented Reality has the potential for a variety of uses. Although the first picture that comes to mind when thinking of AR is glasses, AR comes in a multiple forms. Rather than being an idealized product, we can look at it as a class of products-- all geared to helping make our lives easier.
+          <h2>Imagine for a Moment</h2>
+          <h3>
+            Waking up in the morning, and quietly saying “Ok, can we get some 90s RnB up in here?”</br>
+            As you turn over in bed, still half-asleep, smooth 90s RnB begins to play, and a voice asks “Do you need anything else?”</br>
+            You tell it to “read today’s headlines”.</br>
+            It reads today’s headlines.</br>
+            You tell it to “remind you of today’s agenda”</br>
+            It regurgitates every single assignment, essay, test, and meeting you have scheduled for today.</br>
           </h3>
+          <h4> The truth is, we discovered long ago that when used correctly, AI can make our lives easier, but in order to take advantage of this, we need to take a look at what Artificial Intelligence IS. </h4>
+
           <p id="med">
-            <strong>Medical Applications: </strong>Augmented Reality has the potential to be incredibly useful in the coming years in the field of medicine. AR is the perfect tool for a variety of medical causes: it can be used as a supplement for students studying to become doctors. Students can learn about their field of medical study using AR that projects models of the various concepts they work with. On the other end of the spectrum,  AR can be further utilized by expert doctors to practice and review difficult surgeries, so that when it comes to the real thing they are prepared and ready. As a matter of fact, products such as Accuvein are rapidly taking steps on making these applications a reality. Accuvein uses scanning and AR technology in order to project the network of veins, arteries, and other fluid vessels in a certain part of the body directly on top of the skin, making it easier for doctors and nurses to find veins for blood-drawing and other tests. Vipaar, another AR-based medical solution, uses video projected onto mediums such as google glass in order to help doctors go through surgeries with an extra set of eyes helping them along the way.
+            <strong>Artificial Intelligence:  </strong>Artificial intelligence is the intelligence that a machine demonstrates unlike that of animals and humans. The machines are given jobs to do through programs created by humans to efficiently carry out actions that may be tedious for humans to sit through or quickly run through the data for businesses. What makes artificial intelligence so special is not only  regular computer programs is the machines’ ability to mimic human actions. 
           </p>
           <img src="img/med.jpg" id="medpic">
           <p id="mil">
