--- a/design.html
+++ b/design.html
@@ -74,14 +74,17 @@
           </p>
           <img src="img/med.jpg" id="medpic">
           <p id="mil">
-            <strong>Military Applications: </strong>Augmented Reality has already been used in fighter jets and other military equipment, and is now being used for extensive training facilities. Interactions between those in battle and those at home will be more efficient than ever, with pilots being able to take in information simply through hands-free headsets or projections onto screens. AR can also be used to prevent worst-case scenarios out in the battlefield, by providing pilots with immediate real time data regarding their surroundings. Battle and training modules using AR are also falling into place, allowing soldiers to gain more information regarding their surroundings, whether in boot camp or in the battlefield. A greater awareness allows our soldiers to be more prepared for imminent threats than ever before, with life terrain-based awareness. Although the virtual systems seen in video games such as HALO or Call of Duty are still years away from reality, AR is helping us as a society to get there.
+            <strong>Available Technology: </strong> Despite the immense potential AI proves to envision, the technology available currently only skims the surface of the ocean of possibility. The current use of AI is subtle, in systems such as speech recognition in smartphones with developing smart assistants like Apple’s Siri and Samsung’s Bixby.
           </p>
           <img src="img/mil.jpg" id="milpic">
           <img src="img/ed.jpg" id="edpic">
           <p id="ed">
-            <strong>Education Applications: </strong>Augmented reality ushers in a whole new era of tech-savvy methods of learning. Homework can take on a brand new perspective, with students taking pictures of problems they are unable to do, and receiving immediate feedback on what he or she did wrong. In-class lessons will get much more interactive, with students being able to “look around” digital objects in a way that is not possible with normal computers. Moreover, they can harness their creativity to build digital objects and learn topics in science and engineering without worrying about materials. Outside of school, learning can be increased even more with concepts that can be as simple as taking a picture of an object one wants to learn more about, and immediately getting live info regarding the object and its background.
+            In terms of the raw principles surrounding Artificial Intelligence, current technology revolves around to basic ideas: Machine Learning and Neural Networks.
+            </br>
+            <strong> Machine Learning: </strong>] Machine Learning currently exists as our most common form of AI application. Essentially what occurs in this process, is the use of basic AI principles such as learning and uncovering trends from large amounts of data. Think of a coin sorter, but one that sorts millions on trillions of coins, in mere minutes. </br>
+            <strong> Neural Networks: </strong>From a biological perspective, neural networks make up the backbone of our understanding of how the brain works on a daily basis, through learning. AI development has allowed this biological idea to be recreated on a virtual level, in a sense, mimicking the animal brain’s processes and improving upon it to create virtual systems that can essentially think for themselves. The advancement of neural networks has been a keystone facet in the development of rudimentary AI applications through machine learning, and has also been integrated into more complex systems such as Google’s DeepMind AI. Deep learning and its accompaniments also fall under the subset of machine learning, and create computers and virtual systems that are ever closer to being “human”. 
           </p>
-
+          <p> This brings up the question, how "human" is too "human"?</p>
         </div>
       </section>
       <section class="module">
