--- a/design.html
+++ b/design.html
@@ -72,7 +72,7 @@
             <strong>Artificial Intelligence:  </strong>Artificial intelligence is the intelligence that a machine demonstrates unlike that of animals and humans. The machines are given jobs to do through programs created by humans to efficiently carry out actions that may be tedious for humans to sit through or quickly run through the data for businesses. What makes artificial intelligence so special is not only  regular computer programs is the machines’ ability to mimic human actions. 
           </p>
         
-          <p id="mil">
+          <p id="med">
             <strong>Available Technology: </strong> Despite the immense potential AI proves to envision, the technology available currently only skims the surface of the ocean of possibility. The current use of AI is subtle, in systems such as speech recognition in smartphones with developing smart assistants like Apple’s Siri and Samsung’s Bixby.
           </p>
           
