--- a/design.html
+++ b/design.html
@@ -66,7 +66,7 @@
             You tell it to “remind you of today’s agenda”</br>
             It regurgitates every single assignment, essay, test, and meeting you have scheduled for today.</br>
           </p>
-          <h3> The truth is, we discovered long ago that when used correctly, AI can make our lives easier, but in order to take advantage of this, we need to take a look at what Artificial Intelligence IS. </h3>
+          <h3> <strong>The truth is, we discovered long ago that when used correctly, AI can make our lives easier, but in order to take advantage of this, we need to take a look at what Artificial Intelligence IS. </strong></h3>
 
           <p id="med">
             <strong>Artificial Intelligence:  </strong>Artificial intelligence is the intelligence that a machine demonstrates unlike that of animals and humans. The machines are given jobs to do through programs created by humans to efficiently carry out actions that may be tedious for humans to sit through or quickly run through the data for businesses. What makes artificial intelligence so special is not only  regular computer programs is the machines’ ability to mimic human actions. 
@@ -75,11 +75,11 @@
           <p id="med">
             <strong>Available Technology: </strong> Despite the immense potential AI proves to envision, the technology available currently only skims the surface of the ocean of possibility. The current use of AI is subtle, in systems such as speech recognition in smartphones with developing smart assistants like Apple’s Siri and Samsung’s Bixby.
           </p>
-          
-          <p id="ed">
-            In terms of the raw principles surrounding Artificial Intelligence, current technology revolves around to basic ideas: Machine Learning and Neural Networks.
-            </br>
-            <strong> Machine Learning: </strong>] Machine Learning currently exists as our most common form of AI application. Essentially what occurs in this process, is the use of basic AI principles such as learning and uncovering trends from large amounts of data. Think of a coin sorter, but one that sorts millions on trillions of coins, in mere minutes. </br>
+          <h4>In terms of the raw principles surrounding Artificial Intelligence, current technology revolves around to basic ideas: Machine Learning and Neural Networks.</h4>
+          <p id="med">
+
+            <strong> Machine Learning: </strong>] Machine Learning currently exists as our most common form of AI application. Essentially what occurs in this process, is the use of basic AI principles such as learning and uncovering trends from large amounts of data. Think of a coin sorter, but one that sorts millions on trillions of coins, in mere minutes. </br></p>
+          <p id="med">  
             <strong> Neural Networks: </strong>From a biological perspective, neural networks make up the backbone of our understanding of how the brain works on a daily basis, through learning. AI development has allowed this biological idea to be recreated on a virtual level, in a sense, mimicking the animal brain’s processes and improving upon it to create virtual systems that can essentially think for themselves. The advancement of neural networks has been a keystone facet in the development of rudimentary AI applications through machine learning, and has also been integrated into more complex systems such as Google’s DeepMind AI. Deep learning and its accompaniments also fall under the subset of machine learning, and create computers and virtual systems that are ever closer to being “human”. 
           </p>
           <p> This brings up the question, how "human" is too "human"?</p>
