--- a/design.html
+++ b/design.html
@@ -91,33 +91,34 @@
       <section class="module content" id="concerns">
         <div id="wish">
           <p>
-            One of the main concerns related to augmented reality is privacy, which is also the cause of shutdown for many AR products. For example, the much hyped Google Glass was discontinued due to lingering concerns of recording private conversations. The fact that it had a camera, made it not only vulnerable to various security threats, but also a threat to others’ privacy. It only took one photo of a malicious QR code to make the entire device infected with a virus. The issue of privacy mainly stems for the fact that the augmented reality device is directly seeing what you can see, except it can record or and theoretically have a photographic memory. In addition, augmented reality devices can process the data from the cameras since it can connect to the internet. While all of this can have the potential to be used for good, there remains a chance of abuse.
+      Safety is an incredibly important aspect of Artificial Intelligence research and development, and not just for simple reasons. AI programming can have the usual risks where code malfunctions and causes harm as a result, but it can also pose safety issues on an existential level. Artificial Intelligence, as a whole, is built around the idea of creating virtual systems that have their own “cognition”. Now, this is where a huge issue is faced. When developing this cognition of an AI engine, a small mistake in the code can have potentially destructive impacts on the systems this AI works on, as well as on the real world it interacts with. An example of this is if an AI system is set to achieve a certain goal, but not given specifications on how to achieve this goal, and as a result of its developed virtual cognition chooses to take a relatively harmful path to achieving this goal set forth by the original creator. The cognition we create, is something that could get out of hand very quickly, and therefore it is vital that AI research and testing involves intensive analysis of the specific attributes an AI system is given to work with, particularly in “worst case scenarios”. 
           </p>
           <img src="img/concern.png" id="concpic">
           <p>
-            Lastly, another major concern regarding AR is that it can cause a distraction, as the device overlays information into your sight. For example, when driving part of your vision may be cut off, as a result of the data and visualization on on screen. While AR is a promising, one must take into the consideration of the many risks that come with it before using this technology.
-
+            Another major issue that comes up is the ease of hacking on both a hardware and software level. AI systems from robots to online entities, could be programmed by hackers and those with malicious intent to wreak havoc at a much higher level of efficiency in comparison to a human. A study done by researchers at ZeroFox found that these forms of AI-based hackers had a much higher success rate at mass spreading phishing messages on social media platforms when compared to a human. Aritficial Intelligence comes with its own revolutionized form of hacking, and as a result one must strongly consider and research various forms of protection from these abuses of AI technology. 
           </p>
         </div>
       </section>
       <section class="module">
-        <div class="emblem"><h1>The future versus the past</h1></div>
+        <div class="emblem"><h1> Bold, Beautiful, Big </h1></div>
       </section>
       <section class="module content" id="comp">
         <div class="left">
-            <h2>Google Glass</h2>
+            <h2>Xythe is the Robot Version of a Rennaissance Man</h2>
         </div>
 
         <div class="right">
-              <h2>Microsoft Hololens</h2>
+              <h2>Tech at Its Finest</h2>
 
               </div>
         <p class="left">
-          Google Glass is very similar to a pair of glasses, except it has an onboard processing unit with various different sensors paired with the Glass Operating System, and a mini projector to project information on the actual glass part of Google Glass. This projection is equivalent to viewing a 25 inch screen from roughly 8 feet away. Glass responds to natural voice commands to enable a hands free way to control the device.
+          Model Xythe is a concept built on the idea of “standing on the shoulders of giants”. And therefore its uses are based on the shoulders of one of the biggest sources of information in our world: the Internet. Model Xythe is intended to be a revolution in student and business lifestyles, and its uses are optimized exactly to make these people's’ lives easier. From reading out the day’s schedule in the morning, to taking average travel time data to provide the best route from point A to B on a given day of a given year. From acting as a security robot that immediately alerts you of any fishy business within milliseconds of it occurring near your premises, to analyzing the type of music you listen to in order to provide the ideal playlist for the given time of the day. From acting as a proxy for teachers to upload lectures to for those days where you just cannot get out of bed, to being your notekeeper for business activities. Xythe is the ultimate secretary, sibling, teacher, and assistant a student or CEO could ever need. 
+
 
         </p>
         <p class="right">
-          The HoloLens is a head-mounted display, with a much more powerful processing system, that enables true augmented reality for the user. The user looks through tinted glass with projections on it, to create the augmented reality effect. HoloLens has 6 different cameras to that it can accurately track your motion and depth in your environment; it uses this data to project data/visualizations through its tinted visors. The HoloLens is great at handling tasks like voice recognition, gesture recognition, and spatial mapping, as it’s computing power is greater that the average laptop.
+        The technology we used in the development of this ai robot was based on a simple principle: make it work. We took the baseline structural compositions of robots from companies like Hanson Robotics (creator of media robot star Sophia) to basic roombas, and ran it through the most powerful creativity machine in our world: humans. We plotted and examined the nuances within each of these types of robots based in artificial intelligence, no matter how simple or how complex, and used it to create efficient structures that can be effective and simply utilized for various tasks under one “brain”. </br>
+        Not only do we plan on using AI based on optimized hardware, but Xythe comes with something that not many other robots can actively take advantage of: learning through conversation. Our robots are built to learn by conversing-- not only with owners and humans, but with other robots on a community/regional-based cloud network, where data from a simple weather forecast to a complex network of traffic times is shared, creating a collective base of knowledge that is constantly improving. 
 
         </p>
         <p class="left" id="sec">
